# orbita3d_testbench

./: Cargo.toml  README.md
config/: ethercat_poulpe.yaml  ethercat_poulpe_maxon.yaml  fake.yaml
python/: README.md  ethercat.yaml  orbita3d_config.yaml  orbita3d_control.ipynb  requirements.txt
scripts/: generate_input_data.ipynb  generate_input_data.py  plot_test_data.py  test_cone_input.csv  test_gotozero_input.csv  test_input.csv  test_pitch_input.csv  test_roll_input.csv  test_sinus_input.csv  test_step_input.csv  test_yaw_input.csv
src/: main.rs
